--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.4.1",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng-selectize": "^1.1.3",
+    "ngx-ui-loader": "^8.0.0",
     "rxjs": "~6.4.0",
     "selectize": "^0.12.6",
     "tslib": "^1.10.0",
