--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/custom.js",
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -100,7 +106,7 @@
             "node_modules/ng-selectize/selectize/selectize.standalone.js",
             "src/assets/selectize/dist/js/standalone/selectize.js",
             "src/assets/selectize/examples/js/index.js",
-            "src/assets/selectize/examples/js/jquery.min.js",
+            "src/assets/selectize/examples/js/jquery.min.js"
           ],
           }
         },
@@ -133,3 +139,4 @@
     }},
   "defaultProject": "project"
 }
+
