--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~8.2.0",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
@@ -19,11 +20,15 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@types/googlemaps": "^3.39.0",
     "angular-bootstrap-multiselect": "^1.1.11",
     "jquery": "^3.4.1",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng-selectize": "^1.1.3",
+    "ngx-owl-carousel": "^2.0.7",
+    "ngx-owl-carousel-o": "^2.0.2",
     "ngx-ui-loader": "^8.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~6.4.0",
     "selectize": "^0.12.6",
     "tslib": "^1.10.0",
