--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.5",
     "@types/googlemaps": "^3.39.0",
+    "@types/jquery": "^3.3.31",
     "angular-bootstrap-multiselect": "^1.1.11",
+    "angularx-social-login": "^2.2.1",
     "jquery": "^3.4.1",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng-selectize": "^1.1.3",
     "ngx-owl-carousel": "^2.0.7",
-    "ngx-owl-carousel-o": "^2.0.2",
+    "ngx-owl-carousel-o": "^2.0.3",
+    "ngx-pagination": "^5.0.0",
     "ngx-ui-loader": "^8.0.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~6.4.0",
@@ -42,14 +46,14 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
