--- a/package.json
+++ b/package.json
@@ -26,20 +26,23 @@
     "angular-bootstrap-multiselect": "^1.1.11",
     "angularx-social-login": "^2.2.1",
     "jquery": "^3.4.1",
+    "ng-facebook": "^0.1.6",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng-selectize": "^1.1.3",
+    "ng4-social-login": "^1.4.2",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^2.0.3",
     "ngx-pagination": "^5.0.0",
     "ngx-ui-loader": "^8.0.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.4",
     "selectize": "^0.12.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "~8.2.2",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
