--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "rxjs-compat": "^6.5.4",
     "selectize": "^0.12.6",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "typescript": "~3.5.3",
+    "@angular/cli": "~8.2.2",
+    "@angular/compiler-cli": "~8.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.23",
@@ -53,6 +56,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
