--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -36,16 +35,12 @@
     "ngx-owl-carousel-o": "^2.0.3",
     "ngx-pagination": "^5.0.0",
     "ngx-ui-loader": "^8.0.0",
-    "nodemon": "^2.0.2",
     "owl.carousel": "^2.3.4",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.4",
     "selectize": "^0.12.6",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "typescript": "~3.5.3",
-    "@angular/cli": "~8.2.2",
-    "@angular/compiler-cli": "~8.2.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.23",
@@ -56,7 +51,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.1",
-    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -68,9 +62,5 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
-  },
-  "engines": {
-    "node": "10.16.0",
-    "npm": "6.9.0"
   }
 }
