--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": [
               "src/styles.css",
@@ -93,7 +94,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/_redirects"
+              // "src/_redirects"
             ],
             "styles": [
               "src/styles.css",
@@ -108,7 +109,7 @@
             "src/assets/selectize/dist/js/standalone/selectize.js",
             "src/assets/selectize/examples/js/index.js",
             "src/assets/selectize/examples/js/jquery.min.js"
-          ],
+          ]
           }
         },
         "lint": {
